--- a/compute-js/package.json
+++ b/compute-js/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "js-compute-runtime bin/index.js bin/main.wasm",
         "deploy": "npm run build && fastly compute deploy",
-        "prebuild": "npx check-next-version && npx @fastly/compute-js-static-publish --build-static && webpack"
+        "prebuild": "npx @fastly/compute-js-static-publish --build-static && webpack"
     },
     "dependencies": {
         "@fastly/js-compute": "^0.5.2",
